# teach_me

./: .gitignore  pyproject.toml
answers/: models.py  serializers.py  services.py
backend/: .pylintrc
backend/answers/: admin.py  models.py  urls.py  views.py
backend/categories/: serializers.py
backend/config/: settings.py  urls.py
backend/core/: models.py
backend/profiles/: models.py  serializers.py  urls.py
backend/questions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/: admin.py  serializers.py  urls.py  views.py
categories/: models.py
config/: settings.py  urls.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/questions/: page.tsx
frontend/components/: Nav.tsx  QuestionCards.tsx
frontend/libs/service/: fetchData.ts  getServerSideData.ts
frontend/libs/types/: type.ts
profiles/: models.py
questions/: models.py  serializers.py  services.py  urls.py  views.py
users/: admin.py  models.py  urls.py  views.py
