[tool.poetry]
name = "teach-me"
version = "0.1.0"
description = ""
authors = ["chris <qkymzh123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
black = "^23.11.0"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
django-filter = "^23.4"
django-cors-headers = "^4.3.1"
pylint-django = "^2.5.5"
moviepy = "^1.0.3"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
